# Saltman

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.h  Game.h  Utils.h
include/Animator/: Animator.h
include/Containers/: AssetsContainer.h
include/Entities/: Entity.h  GameObject.h  Player.h
include/GameStates/: ActiveGameState.h  IGameState.h
src/: CMakeLists.txt  Camera.cpp  Game.cpp  main.cpp
src/Animator/: Animator.cpp
src/Containers/: AssetsContainer.cpp
src/Entities/: Entity.cpp  GameObject.cpp  Player.cpp
src/GameStates/: ActiveGameState.cpp  IGameState.cpp
